--- a/src/variables.scss
+++ b/src/variables.scss
@@ -42,7 +42,7 @@
   --line-height-base: 1.5;
 
   --sidebar-bg: var(--background-color);
-  --sidebar-hover-bg: #2b314b; /* Slightly dark hover for sidebar */
+  --sidebar-hover-bg: #2b314b;
   --sidebar-active-bg: var(--secondary-color-hover);
   --sidebar-link-active: var(--link-default);
 }
