--- a/src/components/Pages/Users/style.scss
+++ b/src/components/Pages/Users/style.scss
@@ -1,38 +1,73 @@
-:root {
-  --form-background: var(--white);
-  --lighten-form-background: lighten(--form-background, 10%);
-}
-
-.user-add-container {
+.user-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  height: 100vh;
-  overflow: auto;
-  padding: 20px;
-  box-sizing: border-box;
-}
-.office-wrapper {
-  display: flex;
-  flex-direction: row;
-}
-.form-container {
-  background-color: var(--form-background);
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  border: 1px solid var(--lighten-form-background);
-}
+  padding-bottom: 60px;
+  .users-add-form {
+    background-color: var(--form-background);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border: 1px solid var(--lighten-form-background);
 
-.form-label {
-  font-weight: bold;
-  font-size: 0.95rem;
-  color: #333;
-}
+    .form-wrapper {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-bottom: 20px;
+      .form-group {
+        flex: 0 0 calc(50% - 10px);
+        label {
+          font-weight: bold;
+          font-size: 0.95rem;
+          color: var(--text-color-secondary);
+        }
+      }
 
-.form-label-head {
-  font-weight: bold;
-  font-size: 24px;
-  color: #333;
+      .form-label-head {
+        font-weight: bold;
+        font-size: 24px;
+        color: var(--text-color-secondary);
+      }
+    }
+
+    .form-footer {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+    }
+
+    .form-row {
+      flex: 0 0 100%;
+      input[type="checkbox"] {
+        width: 16px;
+        height: 16px;
+        padding: 0;
+        cursor: pointer;
+
+        &:checked {
+          &::before {
+            content: "✔";
+            display: block;
+            width: 16px;
+            height: 16px;
+            text-align: center;
+            line-height: 16px;
+            color: var(--success-color);
+          }
+        }
+      }
+    }
+  }
+
+  .head-wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    width: 100%;
+  }
+
+  .breadcrumbs {
+    align-self: flex-start;
+  }
 }
