--- a/src/App.scss
+++ b/src/App.scss
@@ -98,3 +98,77 @@ textarea::placeholder {
   margin: 10px 0;
   border: 2px solid var(--border-color) !important;
 }
+
+.user-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 60px;
+  .add-form {
+    background-color: var(--form-background);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border: 1px solid var(--lighten-form-background);
+    width: 100%;
+    .form-wrapper {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-bottom: 20px;
+      .form-group {
+        flex: 0 0 calc(50% - 10px);
+        label {
+          font-weight: bold;
+          font-size: 0.95rem;
+          color: var(--text-color-secondary);
+        }
+      }
+
+      .form-label-head {
+        font-weight: bold;
+        font-size: 24px;
+        color: var(--text-color-secondary);
+      }
+    }
+
+    .form-footer {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+    }
+
+    .form-row {
+      flex: 0 0 100%;
+      input[type="checkbox"] {
+        width: 16px;
+        height: 16px;
+        padding: 0;
+        cursor: pointer;
+
+        &:checked {
+          &::before {
+            content: "✔";
+            display: block;
+            width: 16px;
+            height: 16px;
+            text-align: center;
+            line-height: 16px;
+            color: var(--success-color);
+          }
+        }
+      }
+    }
+  }
+
+  .head-wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    width: 100%;
+  }
+
+  .breadcrumbs {
+    align-self: flex-start;
+  }
+}
