--- a/src/components/dashboard/dashboardStyle.scss
+++ b/src/components/dashboard/dashboardStyle.scss
@@ -34,6 +34,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 20px;
 
     h4 {
       font-size: 16px;
