--- a/src/App.scss
+++ b/src/App.scss
@@ -35,13 +35,17 @@ a {
 
 .btn-primary,
 .btn-danger,
-.btn-warning {
-  padding: 4px 6px;
+.btn-warning,
+.btn-success,
+.btn-info {
+  padding: 4px 25px !important;
   font-size: var(--font-size-base);
   cursor: pointer;
   transition: background-color 0.3s;
   color: var(--white) !important;
-
+  border-radius: 7px !important;
+  height: 40px !important;
+  margin: 0 !important;
   a {
     color: var(--white) !important;
 
@@ -57,15 +61,6 @@ a {
 
   &:hover {
     background-color: var(--hover-color) !important;
-  }
-}
-
-.btn-danger {
-  background-color: var(--red) !important;
-  border: 1px solid var(--red20) !important;
-
-  &:hover {
-    background-color: var(--red20) !important;
   }
 }
 
@@ -160,15 +155,58 @@ textarea::placeholder {
       }
     }
   }
+  .add-btn {
+    height: 40px;
+    border-radius: 5px !important;
+  }
 
   .head-wrapper {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
     width: 100%;
+    align-items: center;
   }
 
   .breadcrumbs {
     align-self: flex-start;
+  }
+
+  .photo-input {
+    position: relative;
+    display: flex;
+    min-width: 150px;
+    min-height: 150px;
+    max-width: 60px;
+    max-height: 60px;
+    overflow: hidden;
+    border-radius: 50%;
+    border: 2px var(--border-color);
+    background-color: var(--link-color);
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+
+  .photo-input-icon {
+    color: var(--white);
+  }
+
+  .photo-placeholder {
+    display: flex;
+    width: 60px;
+    height: 60px;
+    overflow: hidden;
+    border-radius: 50%;
+    background-color: #f7f7f7;
+    font-size: 1rem;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    color: var(--text-color-secondary);
+  }
+
+  .search {
+    min-width: 250px;
   }
 }
