--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,47 +1,16 @@
 :root {
   --red: #ff2829;
   --red20: #ff5b5c;
-
-  // --primary-color: #5a8dee;
-  // --success-color: #28a745;
-  // --success-color-hover: #1b5a29;
-  // --danger-color: #dc3545;
   --error-color: #dc3545;
-  // --border-color: #babec2;
-  // --background-color: #f2f4f4;
-  // --secondary-color: #dacc0d;
-  // --secondary-color-hover: #3f2e3f;
   --text-color: #bac0c7;
   --text-color-secondary: #8494a7;
   --border-default: #dfe3e7;
   --hover-color: #2c6de9;
-  // --primary-hover: #e2ecff;
-
-  // --table-hover: #f1f3f5;
   --input-border: #ced4da;
-  // --button-hover: mix(black, #3f5e83, 10%);
-
-  // --link-color: var(--primary-color);
   --link-default: var(--primary-color);
-  // --link-hover: var(--primary-hover);
   --link-active: var(--primary-hover);
-  // --divider-color: var(--border-color);
-
-  // --breadcrumb-bg: var(--white);
-  // --card-bg: var(--white);
-
-  // --font-family: "Roboto Flex", sans-serif;
-  // --font-color: #475f7b;
-  // --font-size-base: 1rem;
-  // --font-size-sm: 0.8rem;
-  // --font-size-lg: 1.25rem;
-  // --font-weight-normal: 400;
-  // --font-weight-medium: 600;
-  // --font-weight-bold: 700;
-  // --line-height-base: 1.5;
-
   --sidebar-bg: var(--background-color);
-  --sidebar-hover-bg: #2b314b;
+  --sidebar-hover-bg: #E2ECFF;
   --sidebar-active-bg: var(--secondary-color-hover);
   --sidebar-link-active: var(--link-default);
 
@@ -57,16 +26,16 @@
   --gray: #9e9e9e;
 
   /* Primary Colors */
-  --primary-color: #1e88e5; /* Updated blue for better contrast */
-  --primary-hover: #1565c0; /* Slightly darker blue for hover */
-  --secondary-color: #ffca28; /* Bright yellow */
-  --secondary-color-hover: #ffa000; /* Darker yellow for hover */
+  --primary-color: #5A8DEE; /* Updated blue for better contrast */
+  --primary-hover: #719DF0; /* Slightly darker blue for hover */
+  --secondary-color: #fc960f; /* Bright yellow */
+  --secondary-color-hover: #fdac41; /* Darker yellow for hover */
 
   /* Alert Colors */
   --success-color: #43a047; /* Rich green */
   --success-color-hover: #2e7d32; /* Dark green for hover */
-  --danger-color: #e53935; /* Vibrant red */
-  --danger-hover: #b71c1c; /* Darker red for hover */
+  --danger-color: #FF3536; /* Vibrant red */
+  --danger-hover: #FF7575; /* Darker red for hover */
 
   /* Text Colors */
   --font-color: #37474f; /* Dark blue-gray for main text */
@@ -84,7 +53,7 @@
   --table-hover: #e3f2fd; /* Light blue hover for tables */
 
   /* Buttons and Links */
-  --link-color: #1e88e5;
+  --link-color: var(--primary-color);
   --link-hover: #1565c0;
   --button-hover: #e3f2fd;
 
