--- a/src/variables.scss
+++ b/src/variables.scss
@@ -36,6 +36,8 @@
   --success-color-hover: #2e7d32; /* Dark green for hover */
   --danger-color: #FF3536; /* Vibrant red */
   --danger-hover: #FF7575; /* Darker red for hover */
+  --warning-color: #f77e53; /* Bright orange */
+  --warning-hover: #f98e6d; /* Darker orange for hover */
 
   /* Text Colors */
   --font-color: #37474f; /* Dark blue-gray for main text */
