--- a/src/components/Pages/Login/style.scss
+++ b/src/components/Pages/Login/style.scss
@@ -60,17 +60,16 @@ $text-color-dark: #343a40;
         font-size: 1.5rem;
         margin-bottom: 10px;
         text-align: center;
-        font-family: Rubik, Helvetica, Arial, sans-serif;
         font-weight: 400;
         line-height: 1.2;
-        color: #475F7B;
+        color: #475f7b;
       }
 
       h1.form-title {
-        font-size: 1.0rem;
+        font-size: 1rem;
         margin-bottom: 20px;
         text-align: center;
-        color: #828D99 !important;
+        color: #828d99 !important;
         font-weight: 600;
       }
     }
@@ -117,7 +116,7 @@ $text-color-dark: #343a40;
     color: $primary-color;
     margin-bottom: 10px;
     text-decoration: none;
-    
+
     svg {
       margin-right: 5px;
       color: $primary-color;
