--- a/src/App.scss
+++ b/src/App.scss
@@ -50,7 +50,7 @@ a {
   cursor: pointer;
   transition: background-color 0.3s;
   color: var(--white) !important;
-  border-radius: 7px !important;
+  border-radius: 4px !important;
   height: 40px !important;
   margin: 0 !important;
   a {
@@ -196,7 +196,7 @@ textarea::placeholder {
     max-width: 60px;
     max-height: 60px;
     overflow: hidden;
-    border-radius: 50%;
+    border-radius: 12px;
     border: 2px var(--border-color);
     background-color: var(--link-color);
     justify-content: center;
@@ -225,4 +225,15 @@ textarea::placeholder {
   .search {
     min-width: 250px;
   }
+}
+
+.warning-text {
+  color: var(--warning-color);
+  font-size: var(--font-size-base);
+}
+
+.modal-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: var(--text-color-secondary);
 }
