--- a/src/modules/DataTable/styles.scss
+++ b/src/modules/DataTable/styles.scss
@@ -61,6 +61,7 @@
     color: var(--white) !important;
     transition: background-color 0.2s ease !important;
     padding: 0 14px !important;
+    height: 32px !important;
 
     &.btn-warning {
       background-color: var(--secondary-color) !important;
