--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -311,6 +311,7 @@
 
   .collapse-button {
     width: 32px !important;
+    height: 32px !important;
     position: absolute;
     top: 20px;
     right: -22px;
