--- a/src/App.scss
+++ b/src/App.scss
@@ -64,10 +64,10 @@ a {
 
 .btn-primary {
   background-color: var(--primary-color) !important;
-  border: 1px solid var(--hover-color) !important;
+  border: 1px solid var(--primary-hover) !important;
 
   &:hover {
-    background-color: var(--hover-color) !important;
+    background-color: var(--primary-hover) !important;
   }
 }
 
@@ -77,6 +77,15 @@ a {
 
   &:hover {
     background-color: var(--warning-hover) !important;
+  }
+}
+
+.btn-success {
+  background-color: var(--success-color) !important;
+  border: 1px solid var(--success-color) !important;
+
+  &:hover {
+    background-color: var(--success-hover) !important;
   }
 }
 
