--- a/src/components/dashboard/dashboardStyle.scss
+++ b/src/components/dashboard/dashboardStyle.scss
@@ -53,7 +53,7 @@
         border-color 0.3s;
       filter: drop-shadow(0 4px 6px rgba(0, 0, 0, 0.1));
       &:hover {
-        background-color: var(--primary-hover-color);
+        background-color: var(--primary-hover);
       }
 
       &:active {
@@ -65,8 +65,8 @@
 th {
   color: var(--text-color) !important;
 }
-tr{
-  border-right: 1px solid var(--border-color)!important;
+tr {
+  border-right: 1px solid var(--border-color) !important;
 }
 .p-1 {
   max-width: 120px;
