--- a/src/variables.scss
+++ b/src/variables.scss
@@ -10,7 +10,7 @@
   --link-default: var(--primary-color);
   --link-active: var(--primary-hover);
   --sidebar-bg: var(--background-color);
-  --sidebar-hover-bg: #E2ECFF;
+  --sidebar-hover-bg: #e2ecff;
   --sidebar-active-bg: var(--secondary-color-hover);
   --sidebar-link-active: var(--link-default);
 
@@ -26,17 +26,17 @@
   --gray: #9e9e9e;
 
   /* Primary Colors */
-  --primary-color: #5A8DEE; /* Updated blue for better contrast */
-  --primary-hover: #719DF0; /* Slightly darker blue for hover */
+  --primary-color: #262e77;
+  --primary-hover: #2d3794;
   --secondary-color: #fc960f; /* Bright yellow */
   --secondary-color-hover: #fdac41; /* Darker yellow for hover */
 
   /* Alert Colors */
   --success-color: #43a047; /* Rich green */
-  --success-color-hover: #2e7d32; /* Dark green for hover */
-  --danger-color: #FF3536; /* Vibrant red */
-  --danger-hover: #FF7575; /* Darker red for hover */
-  --warning-color: #f77e53; /* Bright orange */
+  --success-hover: #2e7d32; /* Dark green for hover */
+  --danger-color: #f61b09; /* Vibrant red */
+  --danger-hover: #d32f2f; /* Dark red for hover */
+  --warning-color: #ff9800; /* Bright orange */
   --warning-hover: #f98e6d; /* Darker orange for hover */
 
   /* Text Colors */
