--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,7 +3,7 @@
   --red20: #ff5b5c;
   --error-color: #dc3545;
   --text-color: #bac0c7;
-  --text-color-secondary: #8494a7;
+  --text-color-secondary: #5e7289;
   --border-default: #dfe3e7;
   --hover-color: #2c6de9;
   --input-border: #ced4da;
@@ -40,7 +40,7 @@
   --warning-hover: #f98e6d; /* Darker orange for hover */
 
   /* Text Colors */
-  --font-color: #37474f; /* Dark blue-gray for main text */
+  --font-color: #475f7b; /* Dark blue-gray for main text */
   --font-color-light: #607d8b; /* Lighter blue-gray for secondary text */
   --font-color-muted: #b0bec5; /* Muted light blue-gray */
 
