--- a/src/App.scss
+++ b/src/App.scss
@@ -19,8 +19,12 @@ body {
   flex-grow: 1;
   margin-left: 250px;
 
-  &--full {
+  &--partial {
     margin-left: 80px;
+  }
+
+  &--full {
+    margin-left: 0;
   }
 }
 
@@ -60,6 +64,10 @@ a {
       color: var(--white) !important;
     }
   }
+}
+
+.btn-link{
+  text-decoration: none !important;
 }
 
 .btn-primary {
@@ -137,6 +145,8 @@ textarea::placeholder {
       gap: 20px;
       margin-bottom: 20px;
       .form-group {
+        position: relative;
+
         flex: 0 0 calc(50% - 10px);
         label {
           font-weight: bold;
@@ -158,26 +168,38 @@ textarea::placeholder {
       gap: 10px;
     }
 
-    .form-row {
-      flex: 0 0 100%;
-      input[type="checkbox"] {
-        width: 16px;
-        height: 16px;
-        padding: 0;
-        cursor: pointer;
+    input[type="checkbox"] {
+      cursor: pointer;
+    }
 
-        &:checked {
-          &::before {
-            content: "✔";
-            display: block;
-            width: 16px;
-            height: 16px;
-            text-align: center;
-            line-height: 16px;
-            color: var(--success-color);
-          }
-        }
+    .form-switch {
+      margin-bottom: 20px;
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
+      gap: 8px;
+    }
+
+    .form-check-label {
+      font-size: 0.9rem;
+      color: var(--text-color-secondary);
+    }
+
+    .form-with-suggestions {
+      position: relative;
+      width: auto;
+    }
+
+    .form-row {
+      width: 100%;
+      &.visit-time-input {
+        width: calc(50% - 10px);
       }
+    }
+
+    .form-control {
+      cursor: pointer;
+      color: var(--font-color) !important;
     }
   }
   .add-btn {
@@ -247,7 +269,7 @@ textarea::placeholder {
   color: var(--text-color-secondary);
 }
 
-.profile-header-profile-link{
+.profile-header-profile-link {
   display: flex;
   align-items: center;
 }
