--- a/src/components/dashboard/dashboardStyle.scss
+++ b/src/components/dashboard/dashboardStyle.scss
@@ -39,7 +39,7 @@
     h4 {
       font-size: 16px;
       margin-bottom: 5px;
-      color: var(--text-color);
+      color: var(--text-color-secondary);
     }
 
     button {
