--- a/src/components/LogoutButton/style.scss
+++ b/src/components/LogoutButton/style.scss
@@ -28,7 +28,7 @@
   }
 
   &:hover {
-    background: var(--link-default) !important;
+    background: var(--danger-color) !important;
     color: var(--white) !important;
   }
 }
